--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,17 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "repositories": [
+      {
+        "type": "git",
+        "url": "https://github.com/gazatem/glog.git"
+      }
+    ],
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "gazatem/glog": "v0.1-alpha"
+        "gazatem/glog": "dev-development"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
